--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+ 
+ git add .
+ git commit -m "message"
+ git push
+ 
+ 
+ git config --global user.name "your username"
+
+ git config --global user.password "your password"
   
-  
+
+ git remote set-url origin https://name:password@github.com/repo.git
+ 
   
   
   <script src="js/script.js"></script>
