--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 
  git remote set-url origin https://name:password@github.com/repo.git
  
-  
+  git remote add origin  https://USERNAME:PASSWORD@github.com/username/reponame.git
+
+npm - node package manager
+ 
+ npm install 
   
   <script src="js/script.js"></script>
 </body>
